Updated speech.conf for new speech recognition system

--- a/speech.conf
+++ b/speech.conf
@@ -9,7 +9,10 @@ key = asdfasdfasdfasdf
 // Server port
 server_port = 12516
 
+speech_detect_dict = lib/leplm/detect.dic
 speech_action_dict = lib/leplm/action.dic
+speech_lm = lib/leplm/lep.lm.DMP
+speech_hmm = ../cmusphinx-en-us-5.2
 
 speech_word_lep = action
 speech_word_lep = s;yes carter
