LEP now builds into multiple files.
This allows seperation of prerequisites of LEP, which will ease
installation on alternate platforms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,14 @@ project(lep)
 set(lep_MAJOR_VERSION 10)
 set(lep_MINOR_VERSION 1)
 
+option(SERVER "Compile LEP Server" ON)
+option(SERVER_DEVICES "Compile LEP Server with Devices" ON)
+option(SERVER_AUDIO "Compile LEP Server with Audio Output" ON)
+
+option(SPEECH "Compile LEP Speech Client" ON)
+option(GUI "Compile LEP GUI Client" ON)
+option(TEXT "Compile LEP Text Client" ON)
+
 include_directories("${/PROJECT_SOURCE_DIR}/src")
 
 add_subdirectory(src)
