--- a/src/compile_config.h.in
+++ b/src/compile_config.h.in
@@ -17,31 +17,5 @@
   along with LEP.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-#pragma once
-
-#include <iostream>
-// Will be used by subclasses
-#include <vector>
-
-#include "config.h"
-
-// Superclass for all LEP modules
-
-class lepmodule {
-
-public:
-	lepmodule(std::string password, std::string key);
-	
-	// Initializer is seperate as some things only need to be done once
-	virtual int init() = 0;
-	
-	// Run is the main loop containing a listening socket or information collection and transmission
-	virtual int run() = 0;
-
-protected:
-	
-	std::string getparam(std::string paramname, std::vector<configtuple> params, std::string defaultval);
-	
-	std::string password;
-	std::string key;
-};
+#cmakedefine SERVER_DEVICES
+#cmakedefine SERVER_AUDIO
