--- a/server.conf
+++ b/server.conf
@@ -8,6 +8,4 @@ key = asdfasdfasdfasdf
 // Server port
 server_port = 12516
 // Server actions (will be ignored by speech or gui)
-server_action = s,speak
-server_action = a,arduino,/dev/ttyACM0,4
-server_action = m,music,127.0.0.1,12515
+server_action = r,raspberry_pi,1,18
