--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 # Local libraries
 add_library(core config.cpp lepmodule.cpp util.cpp ct_time.cpp)
-add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 configure_file("compile_config.h.in" "compile_config.h")
+
+add_definitions(--std=c++11)
 
 # ctsockets
 include_directories(/usr/include/ctsocket/)
@@ -10,14 +11,14 @@ link_directories(/usr/lib64)
 
 # Server
 if(SERVER)
-  add_library(device action.cpp device.cpp arduino.cpp raspberry_pi.cpp ct_time.cpp)
-  add_library(audio_out speak.cpp music.cpp)
   add_executable(server lepserver.cpp)
   target_link_libraries(server core)
   if(SERVER_DEVICES)
+    add_library(device action.cpp device.cpp arduino.cpp raspberry_pi.cpp ct_time.cpp)
     target_link_libraries(server device)
   endif(SERVER_DEVICES)
   if(SERVER_AUDIO)
+    add_library(audio_out speak.cpp music.cpp)
     target_link_libraries(server audio_out)
     # Espeak
     include_directories(/usr/include/)
@@ -31,6 +32,7 @@ endif(SERVER)
 
 # Speech
 if(SPEECH)
+  add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
   add_library(speech_lib psintf.cpp)
   add_executable(speech speech.cpp)
   target_link_libraries(speech core)
@@ -50,6 +52,7 @@ endif(SPEECH)
 
 # GUI
 if(GUI)
+  add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
   add_executable(gui gui.cpp)
   target_link_libraries(gui core)
   target_link_libraries(gui client)
@@ -65,15 +68,16 @@ if(GUI)
   target_link_libraries(gui ftgl)
   target_link_libraries(gui tomcrypt)
   target_link_libraries(gui ctsocket)
-  install(TARGETS speech DESTINATION bin)
+  install(TARGETS gui DESTINATION bin)
 endif(GUI)
 
 # Text
 if(TEXT)
+  add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
   add_executable(text text.cpp)
   target_link_libraries(text core)
   target_link_libraries(text client)
   target_link_libraries(text tomcrypt)
   target_link_libraries(text ctsocket)
-  install(TARGETS speech DESTINATION bin)
+  install(TARGETS text DESTINATION bin)
 endif(TEXT)
