--- a/speech.conf
+++ b/speech.conf
@@ -12,7 +12,7 @@ server_port = 12516
 speech_detect_dict = lib/leplm/detect.dic
 speech_action_dict = lib/leplm/action.dic
 speech_lm = lib/leplm/lep.lm.DMP
-speech_hmm = ../cmusphinx-en-us-5.2
+speech_hmm = ../recognizer/model/lephmm
 
 speech_word_lep = action
 speech_word_lep = s;yes carter
