Minor improvements to CMakeLists allowing the entire system to be built at once

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,12 +27,16 @@ if(SERVER)
   endif(SERVER_AUDIO)
   target_link_libraries(server tomcrypt)
   target_link_libraries(server ctsocket)
-  install(TARGETS server DESTINATION bin)
+  install(TARGETS server DESTINATION ${PROJECT_SOURCE_DIR})
 endif(SERVER)
+
+# Clients
+if(SPEECH OR GUI OR TEXT)
+  add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
+endif(SPEECH OR GUI OR TEXT)
 
 # Speech
 if(SPEECH)
-  add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
   add_library(speech_lib psintf.cpp)
   add_executable(speech speech.cpp)
   target_link_libraries(speech core)
@@ -47,12 +51,11 @@ if(SPEECH)
   target_link_libraries(speech sphinxad)
   target_link_libraries(speech tomcrypt)
   target_link_libraries(speech ctsocket)
-  install(TARGETS speech DESTINATION bin)
+  install(TARGETS speech DESTINATION ${PROJECT_SOURCE_DIR})
 endif(SPEECH)
 
 # GUI
 if(GUI)
-  add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
   add_executable(gui gui.cpp)
   target_link_libraries(gui core)
   target_link_libraries(gui client)
@@ -68,16 +71,15 @@ if(GUI)
   target_link_libraries(gui ftgl)
   target_link_libraries(gui tomcrypt)
   target_link_libraries(gui ctsocket)
-  install(TARGETS gui DESTINATION bin)
+  install(TARGETS gui DESTINATION ${PROJECT_SOURCE_DIR})
 endif(GUI)
 
 # Text
 if(TEXT)
-  add_library(client lepmodule.cpp lepclient.cpp ct_time.cpp)
   add_executable(text text.cpp)
   target_link_libraries(text core)
   target_link_libraries(text client)
   target_link_libraries(text tomcrypt)
   target_link_libraries(text ctsocket)
-  install(TARGETS text DESTINATION bin)
+  install(TARGETS text DESTINATION ${PROJECT_SOURCE_DIR})
 endif(TEXT)
