Switched to pulseaudio input to pocketsphinx
Faster, but some false-positives

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,7 +37,7 @@ endif(SPEECH OR GUI OR TEXT)
 
 # Speech
 if(SPEECH)
-  add_library(speech_lib psintf.cpp)
+  add_library(speech_lib audio.cpp psintf.cpp)
   add_executable(speech speech.cpp)
   target_link_libraries(speech core)
   target_link_libraries(speech client)
@@ -46,9 +46,10 @@ if(SPEECH)
   include_directories(/usr/include/sphinxbase)
   include_directories(/usr/include/pocketsphinx)
   link_directories(/usr/lib64)
+  target_link_libraries(speech pulse)
+  target_link_libraries(speech pulse-simple)
   target_link_libraries(speech pocketsphinx)
   target_link_libraries(speech sphinxbase)
-  target_link_libraries(speech sphinxad)
   target_link_libraries(speech tomcrypt)
   target_link_libraries(speech ctsocket)
   install(TARGETS speech DESTINATION ${PROJECT_SOURCE_DIR})
